<resources>
    <string name="app_name">MfExpert LMS</string>
    <string name="preference_file_key">mfexpert_lms_pref_file_key</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_drawer_description">Navigation Drawer</string>
    <string name="nav_drawer_profile_image_desc">Profile Image</string>

    <string name="sorry">Sorry</string>
    <string name="no_results">No results to show</string>
    <string name="you_are_offline">You are offline</string>

    <string name="login">Login</string>
    <string name="logo_img_description">MfExpert</string>

    <!--cbm Details-->

    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="surname">Surname</string>
    <string name="mobile">Mobile No</string>
    <string name="kyc_name">Name as per Primary KYC</string>
    <string name="spouse_name">If member don\'t have surname then please enter spouse name</string>

    <string name="same_as_present">Same as Present Address</string>
    <string name="house_no">House/Door No</string>
    <string name="street">Street/Colony</string>
    <string name="mandal">Mandal/Taluka</string>
    <string name="city">City/Village/Town</string>
    <string name="phone">Phone</string>
    <string name="relation">Relation</string>
    <string name="district">District</string>
    <string name="pincode">Pincode*</string>

    <string name="name">Name</string>
    <string name="dob">Date of birth</string>
    <string name="age">Age</string>
    <string name="age_as_on">Age as on</string>
    <string name="occupation">Occupation</string>
    <string name="literacy">Literacy</string>


    <string name="primarykyc">Primary KYC</string>
    <string name="primaryKYCNo">Doc No</string>
    <string name="secondarykyc">Secondary KYC</string>
    <string name="secondaryKYCNo">Doc No</string>

    <string name="loanPurpose">Loan Purpose</string>

    <!--village-->
    <string name="village_Code_auto">Auto</string>
    <string name="village_name">Village*</string>
    <string name="description">Description</string>
    <string name="open_date">Open Date*</string>
    <string name="distance">Distance*</string>


    <!--- Loan Utilization Check-->
    <string name="member_code">Member Code*</string>
    <string name="last_uc_date">Last UC Date*</string>
    <string name="remarks">Remarks</string>
    <string name="average_monthly_income">Average Monthly Income*</string>

    <!--Group-->
    <string name="group_Code_auto">Auto Code</string>
    <string name="group_name">Group Name*</string>
    <string name="group_description">Description</string>
    <string name="center">Center*</string>
    <string name="staff">Geetha</string>


    <!--center-->
    <string name="center_code_no">Auto</string>
    <string name="center_name">Center Name*</string>
    <string name="staff_name">Geetha</string>
    <string name="repayment_type">Repayment Type*</string>
    <string name="working_category">Working Category*</string>


    <!--Address Info-->
    <string name="route">Route*</string>
    <string name="location">Location*</string>
    <string name="landmark">Land Mark*</string>
    <string name="meeting_place">Meeting Place*</string>
    <string name="premises_owner_name">Premises Owner Name*</string>
    <string name="house_number">House No*</string>
    <string name="street_name">Street Name*</string>
    <string name="taluka">Village/Taluka*</string>


    <string-array name="genderType">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="genderPrompt">Gender</string>


    <string-array name="maritalStatusType">
        <item>Married</item>
        <item>Un Married</item>
    </string-array>
    <string name="maritalStatusPrompt">Marital Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Sync Account Type
    <string name="sync_account_type">net.rmitsolutions.mfexpert</string>
    <string name="sync_content_authority_masters">net.rmitsolutions.mfexpert.mastersyncprovider</string>

    <string name="sync_content_authority_districts">net.rmitsolutions.mfexpert.districtsyncprovider</string>
    <string name="sync_content_authority_relations">net.rmitsolutions.mfexpert.relationsyncprovider</string>
    <string name="sync_content_authority_occupations">net.rmitsolutions.mfexpert.occupationsyncprovider</string>
    <string name="sync_content_authority_literacy">net.rmitsolutions.mfexpert.literacysyncprovider</string>
    <string name="sync_content_authority_primary_kyc">net.rmitsolutions.mfexpert.primarykycsyncprovider</string>
    <string name="sync_content_authority_secondary_kyc">net.rmitsolutions.mfexpert.secondarykycsyncprovider</string>
    <string name="sync_content_authority_loan_purpose">net.rmitsolutions.mfexpert.loanpurposesyncprovider</string>
    <string name="sync_content_authority_kyc_details">net.rmitsolutions.mfexpert.kycdetailssyncprovider</string>
    <string name="sync_content_authority_assign_category">net.rmitsolutions.mfexpert.assigncategorysyncprovider</string>
    <string name="sync_content_authority_banks">net.rmitsolutions.mfexpert.banksyncprovider</string>
    <string name="sync_content_authority_caste">net.rmitsolutions.mfexpert.castesyncprovider</string>
    <string name="sync_content_authority_house_ownership">net.rmitsolutions.mfexpert.houseownershipsyncprovider</string>
    <string name="sync_content_authority_loan_close_type">net.rmitsolutions.mfexpert.loanclosetypesyncprovider</string>
    <string name="sync_content_authority_income_proof">net.rmitsolutions.mfexpert.incomeproofsyncprovider</string>
    <string name="sync_content_authority_loan_rejection">net.rmitsolutions.mfexpert.loanrejectionsyncprovider</string>
    <string name="sync_content_authority_member_rejection">net.rmitsolutions.mfexpert.memberrejectionsyncprovider</string>
    <string name="sync_content_authority_nationality">net.rmitsolutions.mfexpert.nationalitysyncprovider</string>
    <string name="sync_content_authority_products">net.rmitsolutions.mfexpert.productsyncprovider</string>
    <string name="sync_content_authority_religion">net.rmitsolutions.mfexpert.religionsyncprovider</string>

    <string name="refresh_token_dialog_fragment_tag">refresh_token_dialog_fragment_tag</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_username">Username</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="repayment_amount_hint">Repayment Amount</string>

    <string name="rupeeSymbol">u20B9</string>
    <string name="rupeeText">u20A8</string>
    <string name="badNumber">Bad Number</string>
    <string name="prepaymentType">Prepayment Type</string>

</resources>
