<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >



    <data>

        <variable
            name="personalInfoVm"
           type="net.rmitsolutions.mfexpert.lms.viewmodels.PersonalInfoModel"/>
    </data>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:paddingBottom="0dp"
       >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lblFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:text="@={personalInfoVm.firstName}"
                android:inputType="text"
                android:maxLines="1"
                 />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lblMiddlename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtMiddleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/middle_name"
                android:inputType="text"
                android:text="@={personalInfoVm.middleName}"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lblSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="text"
                android:text="@={personalInfoVm.surName}"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spouse_name"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lblKycName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtKycName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kyc_name"
                android:inputType="text"
                android:text="@={personalInfoVm.nameAsPerKYC}"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/chooseGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={personalInfoVm.gender}"
            android:hint="@string/genderPrompt"
            android:textColorHint="@color/colorAccent"
            app:met_floatingLabel="normal" />


        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/maritalStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maritalStatusPrompt"
            android:textColorHint="@color/colorAccent"
            android:text="@={personalInfoVm.maritalStatus}"
            app:met_floatingLabel="normal" />

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                app:errorTextAppearance="@style/ErrorStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dob"
                    android:inputType="text"
                    android:focusable="false"
                    android:text="@={personalInfoVm.dob}"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                app:errorTextAppearance="@style/ErrorStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="text"
                    android:text="@={personalInfoVm.age}"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lblAgeAsOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:errorTextAppearance="@style/ErrorStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtAgeAsOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age_as_on"
                android:inputType="text"
                android:focusable="false"
                android:text="@={personalInfoVm.ageAsOn}"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lblMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"

                android:inputType="number"
                android:text="@={personalInfoVm.mobile}"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    </LinearLayout>

    </ScrollView>

</layout>