<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data class="PrimaryInfoBinding">
        <variable
            name="primaryInfoVm"
            type="net.rmitsolutions.mfexpert.lms.viewmodels.CenterPrimaryInformationModel"/>
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollViewUp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginRight="@dimen/margin_right"
               >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="17sp"
                    android:textColor="@color/app_body_text_dark"
                    android:layout_marginTop="20dp"
                    android:text="@string/group_Code_auto"/>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_overlay" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lblCenterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtCenterName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/center_name"
                        android:inputType="text"
                        android:text="@={primaryInfoVm.centerName}"
                        android:maxLines="1"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lblCenterDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtCenterDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="text"
                        android:text="@={primaryInfoVm.description}"
                        android:maxLines="1"
                        />

                </android.support.design.widget.TextInputLayout>

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/chooseVillage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={primaryInfoVm.villageName}"
                    android:hint="Village*"
                    android:textColorHint="@color/colorAccent"
                    app:met_floatingLabel="normal" />



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lblOpenDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtOpenDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/open_date"
                        android:text="@={primaryInfoVm.openDate}"
                        android:maxLines="1"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lblDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtDistance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/distance"
                        android:inputType="numberDecimal"
                        android:text="@={primaryInfoVm.distance}"
                        android:maxLines="1"
                        />
                </android.support.design.widget.TextInputLayout>

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/chooseRepaymentType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={primaryInfoVm.paymentType}"
                    android:hint="@string/repayment_type"
                    android:textColorHint="@color/colorAccent"
                    app:met_floatingLabel="normal" />

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/chooseCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={primaryInfoVm.category}"
                    android:hint="@string/working_category"
                    android:textColorHint="@color/colorAccent"
                    app:met_floatingLabel="normal" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/app_body_text_dark"
                    android:textSize="17sp"
                    android:layout_marginTop="20dp"
                    android:text="@string/staff_name"/>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_overlay" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</layout>