<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data class="AddressInfoBinding">
        <variable
            name="addressInfoVm"
            type="net.rmitsolutions.mfexpert.lms.viewmodels.CenterAddressInformationModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollViewUp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginRight="@dimen/margin_right"
                android:paddingBottom="0dp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblRoute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtRoute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/route"
                        android:text="@={addressInfoVm.route}"
                        android:inputType="text"
                        android:maxLines="1"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location"
                        android:inputType="text"
                        android:text="@={addressInfoVm.location}"
                        android:maxLines="1"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblLandMark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtLandMark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/landmark"
                        android:inputType="text"
                        android:text="@={addressInfoVm.landmark}"
                        android:maxLines="1"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/chooseMeetingPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/meeting_place"
                    android:text="@={addressInfoVm.meetingPlace}"
                    android:textColorHint="@color/colorAccent"
                    app:met_floatingLabel="normal" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblPremisesOwnerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPremisesOwnerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/premises_owner_name"
                        android:inputType="text"
                        android:text="@={addressInfoVm.premisesOwnerName}"
                        android:maxLines="1"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblHouseNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtHouseNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/house_number"
                        android:text="@={addressInfoVm.houseNo}"
                        android:maxLines="1"
                        android:singleLine="true"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblStreetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtStreetName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/street_name"
                        android:inputType="text"
                        android:text="@={addressInfoVm.streetName}"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblVillage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtVillage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/taluka"
                        android:inputType="text"
                        android:text="@={addressInfoVm.villageName}"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                  <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lblPincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pincode"
                        android:inputType="number"
                        android:text="@={addressInfoVm.pincode}"
                        android:maxLines="1"
                        />


                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/saveDetails"
                    android:textColor="@color/white"
                    android:background="@color/colorAccent"
                    android:text="Save"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</layout>