<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userVm"
            type="net.rmitsolutions.mfexpert.lms.viewmodels.UserViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingEnd="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:paddingTop="@dimen/padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            app:errorTextAppearance="@style/ErrorStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_username"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={userVm.userName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            app:errorTextAppearance="@style/ErrorStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={userVm.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space8dp"
            android:paddingTop="@dimen/padding">

            <Button
                android:id="@+id/buttonLogin"
                style="@style/ThemeButton"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:onClick="onLoginClick"
                android:paddingEnd="64dp"
                android:paddingStart="64dp"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </LinearLayout>
</layout>